refactoring and better display of results